# pharm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: daemon.rs  database.rs  interval.rs  main.rs  time.rs
