[package]
name = "pharm"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Manson <nicholaspmanson@gmail.com>"]
description = "CLI-first medication management and reminder tool"
license = "MIT"
repository = "https://github.com/sqrew/pharm"
readme = "README.md"
keywords = ["medication", "health", "reminder", "cli", "notifications"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4.11"
chrono = "0.4.42"
